--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
 }
 
 </style>
+
+//Hehe
+<body>
+<div id="option">
+    <input name="updateButton" 
+           type="button" 
+           value="Update" 
+           onclick="updateData()" />
+</div>
+</body>
+
 <svg width="960" height="600"></svg>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
