--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </style>
 
-//Hehe
+//Hehe2
 <body>
 <div id="option">
     <input name="updateButton" 
@@ -70,6 +70,11 @@ d3.json("miserables.json", function(error, graph) {
 
   simulation.force("link")
       .links(graph.links);
+      /* This ought reinitialize. 
+      .linkDistance(function (d) {
+           return d.linkDistance;
+     })
+     */
 
   function ticked() {
     link
