--- a/index.html
+++ b/index.html
@@ -14,10 +14,28 @@
 
 </style>
 
-//Hehe4
+"Klimatpolitiken ska överordnas annan politik"
+Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
+Tanken är att framtida riksdagar och regeringar ska tvingas ta hänsyn till, och i praktiken överordna, klimatet när andra politiska 
+beslut ska fattas.
+Argument för:
+Den nya klimatpolitiken är den viktigaste reform den nuvarande generationens politiker kommer att ge kommande generationer. Sverige 
+kan nu bli ett av världens första fossilfria välfärdsländer. Omställningen kommer att ge vårt land bättre hälsa, fler jobb och ökad 
+konkurrenskraft.
+Argument mot:
+Klimatpolitikens upphöjande till lag ökar inte möjligheten att bedriva effektivt klimatpolitiskt arbete. Framtida riksdagsmajoriteter 
+kan upphäva lagen. Klimatfrågor är sammanlänkade med övriga samhällsfrågor och miljöpolitik bör beaktas i samklang med ekonomi och 
+sociala frågor. Dyra utsläppsminskningar i Sverige minskar inte utsläppen globalt, däremot skadas svensk tillväxt.
+
 <body>
 <div id="option">
-    <input name="updateButton" 
+    <input name="Instämmer helt" 
+           type="button" 
+           value="Update" 
+           onclick="updateData()" />
+</div>
+<div id="option">
+    <input name="Helt emot" 
            type="button" 
            value="Update" 
            onclick="updateData()" />
