--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ sociala frågor. Dyra utsläppsminskningar i Sverige minskar inte utsläppen glo
 <div id="option">
     <input name="Instämmer helt" 
            type="button" 
-           value="Update" 
+           value="Instämmer helt" 
            onclick="updateData()" />
 </div>
 <div id="option">
     <input name="Helt emot" 
            type="button" 
-           value="Update" 
+           value="Helt emot" 
            onclick="updateData()" />
 </div>
 </body>
