--- a/index.html
+++ b/index.html
@@ -33,12 +33,28 @@ sociala frågor. Dyra utsläppsminskningar i Sverige minskar inte utsläppen glo
            type="button" 
            value="Instämmer helt" 
            onclick="updateData()" />
+           // switch to group 5
+</div>
+<div id="option">
+    <input name="Instämmer delvis" 
+           type="button" 
+           value="Instämmer delvis" 
+           onclick="updateData()" />
+           // switch to group 9
+</div>
+<div id="option">
+    <input name="Delvis emot" 
+           type="button" 
+           value="Delvis emot" 
+           onclick="updateData()" />
+           // switch to group 3
 </div>
 <div id="option">
     <input name="Helt emot" 
            type="button" 
            value="Helt emot" 
            onclick="updateData()" />
+           // switch to group 6
 </div>
 </body>
 
