--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
 <body>
 
-<div id="option">
-  <div id="option">
+<div id="questions">
+  <div id="fråga1">
+  <class ?>    
     "Klimatpolitiken ska överordnas annan politik"
     Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
     Tanken är att framtida riksdagar och regeringar ska tvingas ta hänsyn till, och i praktiken överordna, klimatet när andra politiska 
@@ -32,10 +33,10 @@
     Klimatpolitikens upphöjande till lag ökar inte möjligheten att bedriva effektivt klimatpolitiskt arbete. Framtida riksdagsmajoriteter 
     kan upphäva lagen. Klimatfrågor är sammanlänkade med övriga samhällsfrågor och miljöpolitik bör beaktas i samklang med ekonomi och 
     sociala frågor. Dyra utsläppsminskningar i Sverige minskar inte utsläppen globalt, däremot skadas svensk tillväxt.
-  </div id="option">
-  <div id="option">
+  </div id="fråga1">
+  <div id="fråga2">
     "Värnplikten"
-  </div id="option">
+  </div id="fråga2">
 </div>
   
 <div id="option">
