--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <div id="questions">
-  <div id="fråga1", class=question>
+  <div id="fråga1" class=question>
     "Klimatpolitiken ska överordnas annan politik"
     Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
     Tanken är att framtida riksdagar och regeringar ska tvingas ta hänsyn till, och i praktiken överordna, klimatet när andra politiska 
