--- a/index.html
+++ b/index.html
@@ -32,10 +32,13 @@
     Klimatpolitikens upphöjande till lag ökar inte möjligheten att bedriva effektivt klimatpolitiskt arbete. Framtida riksdagsmajoriteter 
     kan upphäva lagen. Klimatfrågor är sammanlänkade med övriga samhällsfrågor och miljöpolitik bör beaktas i samklang med ekonomi och 
     sociala frågor. Dyra utsläppsminskningar i Sverige minskar inte utsläppen globalt, däremot skadas svensk tillväxt.
-  </div id="fråga1">
-  <div id="fråga2">
+  </div>
+  <div id="fråga2" class="question" >
     "Värnplikten"
-  </div id="fråga2">
+  </div>
+  <div id="fråga3" class="question">
+    "Niqab"
+  </div
 </div>
   
 <div id="option">
