--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <link rel="stylesheet" type="text/css" href="magic.css">
+  <script src="logic.js"></script>
 
 
 <meta charset="utf-8">
@@ -76,7 +77,8 @@
 </body>
 
 <svg width="960" height="600"></svg>
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://
+             js.org/d3.v4.min.js"></script>
 <script>
 
 var svg = d3.select("svg"),
