--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
 </body>
 
 <svg width="960" height="600"></svg>
-<script src="https://
-             js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
 var svg = d3.select("svg"),
