--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
 </div>
   
 <div id="option">
-    <input name="Instämmer helt" 
+    <input name="option1" 
            type="button" 
            value="Instämmer helt" 
            onclick="updateData()" />
            // switch to group 5
 </div>
 <div id="option">
-    <input name="Instämmer delvis" 
+    <input name="option2" 
            type="button" 
            value="Instämmer delvis" 
            onclick="updateData()" />
            // switch to group 9
 </div>
 <div id="option">
-    <input name="Delvis emot" 
+    <input name="option3" 
            type="button" 
            value="Delvis emot" 
            onclick="updateData()" />
            // switch to group 3
 </div>
 <div id="option">
-    <input name="Helt emot" 
+    <input name="option4" 
            type="button" 
            value="Helt emot" 
            onclick="updateData()" />
