--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 <div id="questions">
-  <div id="fråga1" class="question">
+  <div id="question1" class="question">
     "Klimatpolitiken ska överordnas annan politik"
     Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
     Tanken är att framtida riksdagar och regeringar ska tvingas ta hänsyn till, och i praktiken överordna, klimatet när andra politiska 
@@ -38,10 +38,10 @@
     kan upphäva lagen. Klimatfrågor är sammanlänkade med övriga samhällsfrågor och miljöpolitik bör beaktas i samklang med ekonomi och 
     sociala frågor. Dyra utsläppsminskningar i Sverige minskar inte utsläppen globalt, däremot skadas svensk tillväxt.
   </div>
-  <div id="fråga2" class="question" >
+  <div id="question2" class="question" >
     "Värnplikten"
   </div>
-  <div id="fråga3" class="question">
+  <div id="question3" class="question">
     "Niqab"
   </div>
 </div>
