--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <input name="option1" 
            type="button" 
            value="Instämmer helt" 
-           onclick="show_next_question(d)" />
+           onclick="show_next_question()" />
            // switch to group 5
 </div>
 <div id="option">
