--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
            type="button" 
            value="Instämmer helt" 
            onclick="show_next_question()" />
+           svg.select("circle").data()[0].setAttribute(#228B22) //Change the colour of currentNode to dark green.
            // switch to group 5
 </div>
 <div id="option">
