--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
   </div>
 </div>
   
+//We ought set global variable currentNode here.
+var currentNode = 1;
+  
 <div id="option">
     <input name="option1" 
            type="button" 
