--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ var currentNode = 1;
            type="button" 
            value="Instämmer helt" 
            onclick="show_next_question()" 
-           svg.select("circle").data()[0].setAttribute(#228B22) //Change the colour of currentNode to dark green. />
+           svg.select("circle").data(graph.nodes)[0].rgb(#228B22) //Change the colour of currentNode to dark green. />
            // switch to group 5
 </div>
 <div id="option">
