--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ variable currentNode = 1;
            type="button" 
            value="Instämmer helt" 
            onclick="show_next_question()" 
-           svg.select("circle").data(graph.nodes)[0].style("fill", "red") //Change the colour of currentNode to dark green. />
+           svg.select("circle").style("fill", "red") //Change the colour of currentNode to dark green. />
            // switch to group 5
 </div>
 <div id="option">
