--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 </div>
   
   
-variable currentNode = 1;
+variable currentNode = 2;
   
 <div id="option">
     <input name="option1" 
            type="button" 
            value="Instämmer helt" 
            onclick="show_next_question()" 
-           svg.select("circle").style("fill", "red") //Change the colour of currentNode to dark green. />
+           svg.selectAll("circle").style("fill", "red") //Change the colour of currentNode to dark green. />
            // switch to group 5
 </div>
 <div id="option">
