--- a/index.html
+++ b/index.html
@@ -264,28 +264,28 @@
         <input name="option1" 
                type="button" 
                value="Instämmer helt" 
-               onclick="show_next_question()" 
+               onclick="show_next_question(green)" 
                // switch to group 5
     </div>
     <div id="option">
         <input name="option2" 
                type="button" 
                value="Instämmer delvis" 
-               onclick="updateData()" />
+               onclick="show_next_question(green)" />
                // switch to group 9
     </div>
     <div id="option">
         <input name="option3" 
                type="button" 
                value="Delvis emot" 
-               onclick="updateData()" />
+               onclick="show_next_question(green)" />
                // switch to group 3
     </div>
     <div id="option">
         <input name="option4" 
                type="button" 
                value="Helt emot" 
-               onclick="updateData()" />
+               onclick="show_next_question(green)" />
                // switch to group 6
     </div>
 </div>
