--- a/index.html
+++ b/index.html
@@ -271,21 +271,21 @@
         <input name="option2" 
                type="button" 
                value="Instämmer delvis" 
-               onclick="show_next_question()" />
+               onclick="show_next_question2()" />
                // switch to group 9
     </div>
     <div id="option">
         <input name="option3" 
                type="button" 
                value="Delvis emot" 
-               onclick="show_next_question()" />
+               onclick="show_next_question3()" />
                // switch to group 3
     </div>
     <div id="option">
         <input name="option4" 
                type="button" 
                value="Helt emot" 
-               onclick="show_next_question()" />
+               onclick="show_next_question()4" />
                // switch to group 6
     </div>
 </div>
