--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <input name="option4" 
                type="button" 
                value="Helt emot" 
-               onclick="show_next_question()4" />
+               onclick="show_next_question4()" />
                // switch to group 6
     </div>
 </div>
