--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 <body>
 
 <div id="questions">
+  height: 200px;
+  width: 50%;
   <div id="question1" class="question">
       Klimatpolitiken ska överordnas annan politik
       Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
