--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-<div id="questions" height=200px width=100%>
+<div id="questions" height=70% width=100%>
 
   <div id="question1" class="question">
       Klimatpolitiken ska överordnas annan politik
