--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 
   </div>
   <div id="question16" class="question">
-      Skatten på pension ska vara samma som på lön
-      Skatten för pensionärer har sänkts, men fortfarande betalar ungefär hälften av pensionärerna procentuellt mer i skatt än en löntagare. Detta beror på jobbavdraget vars syfte är att fler ska välja jobb före bidrag samtidigt som fler i pensionsålder ska stimuleras att fortsätta arbeta.
-      Argument för
+      <h3>Skatten på pension ska vara samma som på lön</h3>
+      <p>Skatten för pensionärer har sänkts, men fortfarande betalar ungefär hälften av pensionärerna procentuellt mer i skatt än en löntagare. Detta beror på jobbavdraget vars syfte är att fler ska välja jobb före bidrag samtidigt som fler i pensionsålder ska stimuleras att fortsätta arbeta.</p>
+      <h4>Argument för</h4>
       Antalet fattiga pensionärer i Sverige beräknas till ungefär 250 000. Pension är uppskjuten lön. Högre beskattning på redan intjänade pengar är orättvist. Pensionärsskatten kan skada samhällsgemenskapen mellan generationer.
-      Argument mot
+      <h4>Argument mot</h4>
       Jobbskatteavdraget har stimulerat fler att jobba mer och längre. Det har svensk ekonomi mått bra av, vilket också gynnar pensionärer. Den som arbetar har merkostnader för lunch, resor, kläder och annat.
 
   </div>
