--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 <div id="questions" height=70% width=100%>
 
   <div id="question1" class="question">
-      Klimatpolitiken ska överordnas annan politik
+      <h2>Klimatpolitiken ska överordnas annan politik</h2>
       Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
       Tanken är att framtida riksdagar och regeringar ska tvingas ta hänsyn till, och i praktiken överordna, klimatet när andra politiska 
       beslut ska fattas.
-      Argument för:
+      <h5>Argument för:</h5>
       Den nya klimatpolitiken är den viktigaste reform den nuvarande generationens politiker kommer att ge kommande generationer. Sverige 
       kan nu bli ett av världens första fossilfria välfärdsländer. Omställningen kommer att ge vårt land bättre hälsa, fler jobb och ökad 
       konkurrenskraft.
