--- a/index.html
+++ b/index.html
@@ -263,29 +263,25 @@
         <input name="option1" 
                type="button" 
                value="Instämmer helt" 
-               onclick="show_next_question()" 
-               // switch to group 5
+               onclick="show_next_question()"  />
     </div>
     <div id="option">
         <input name="option2" 
                type="button" 
                value="Instämmer delvis" 
                onclick="show_next_question2()" />
-               // switch to group 9
     </div>
     <div id="option">
         <input name="option3" 
                type="button" 
                value="Delvis emot" 
                onclick="show_next_question3()" />
-               // switch to group 3
     </div>
     <div id="option">
         <input name="option4" 
                type="button" 
                value="Helt emot" 
                onclick="show_next_question4()" />
-               // switch to group 6
     </div>
 </div>
   
