--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
 
 <div id="questions" height=70% width=100%>
 
+    <div id="question0" class="question">
+      <h2>Välkommen till den modifierade valkompassen</h2>
+      fewfew
+      <b>Argument för:</b>
+      wefwef
+  </div>
+  
   <div id="question1" class="question">
       <h2>Klimatpolitiken ska överordnas annan politik</h2>
       Syftet med den nya klimatlagen från 1 januari 2018 är att främja en framtida långsiktig och stabil politik för klimat och miljö. 
