--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
 <div id="questions" height=70% width=100%>
 
     <div id="question0" class="question">
-      <h2>Välkommen till den modifierade valkompassen</h2>
-      fewfew
+      <h2>Välkommen, </h2>
+      Det här är den modifierade valkompassen. Frågorna du får här är desamma, men de 25 visas nu i en directed force graph 
+      här under. De olika frågorna dras närmare de partierna som håller med dem, och längre ifrån de partier som är emot dem.  
       <br />
       <br />
-      <b>Argument för:</b>
+      1. Du kan klicka och dra i frågorna för att hitta en nya jämviktslägen. Ökningen av Rut kommer t ex. alltid ligga närmare
+      alliansen, och Förbud mot vinster i välfärden hör till vänstern - men de måste inte ligga exakt där de ligger. 
       <br />
-      wefwef
+      2. Du kan alltid hålla musen över en node för att se vilken fråga den motsvarar.
+      
   </div>
   
   <div id="question1" class="question">
