--- a/index.html
+++ b/index.html
@@ -278,6 +278,15 @@
 </div>
   
 
+<div id="start_option">
+    <div id="option">
+        <input name="option0" 
+               type="button" 
+               value="Jag förstår!" 
+               onclick="mission_start()"  />
+    </div>
+</div>
+  
 <div id="options">  
     <div id="option">
         <input name="option1" 
