--- a/index.html
+++ b/index.html
@@ -288,25 +288,25 @@
 </div>
   
 <div id="options">  
-    <div id="option">
+    <div id="option" class="option">
         <input name="option1" 
                type="button" 
                value="Instämmer helt" 
                onclick="show_next_question()"  />
     </div>
-    <div id="option">
+    <div id="option" class="option">
         <input name="option2" 
                type="button" 
                value="Instämmer delvis" 
                onclick="show_next_question2()" />
     </div>
-    <div id="option">
+    <div id="option" class="option">
         <input name="option3" 
                type="button" 
                value="Delvis emot" 
                onclick="show_next_question3()" />
     </div>
-    <div id="option">
+    <div id="option" class="option">
         <input name="option4" 
                type="button" 
                value="Helt emot" 
