--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 
-<div id="questions" height=70% width=100%>
+<div id="questions" height=360px width=100%>
 
     <div id="question0" class="question">
       <h2>Välkommen, </h2>
@@ -58,8 +58,9 @@
       <h2>Den obligatoriska värnplikten ska återinföras</h2>
       Den allmänna värnplikten avskaffades 2010 med påpekandet att militär värnplikt kan återinföras vid krig. 2017 infördes en mönstringsplikt, men bara 13 000 personer kommer årligen att kallas till mönstring.
       <br />
+      <br />
     <b>Argument för</b>
-    <br />
+    
       Obligatorisk militär värnplikt för män och kvinnor garanterar ett folkligt inflytande över militären, samtidigt som Försvarsmakten klarar sin personalförsörjning. Försvaret är till för att garantera vårt nationella självbestämmande och därför bör Sverige ha en folkligt förankrad försvarsmakt med både fasta och kontraktsanställda.
       <b>Argument mot</b>
     <br />
