--- a/index.html
+++ b/index.html
@@ -67,20 +67,25 @@
       Den obligatoriska militära värnplikten är ett system som överlevt sig självt. Deltagande i militära verksamheter ska bygga på frivillighet. Modern krigföring kräver inte längre gigantiska folkliga arméer utan snarare kvalitativt högteknologiska system med experter och professionella soldater.
   </div>
   <div id="question3" class="question">
-      Fler pappamånader ska införas
+      <h2>Fler pappamånader ska införas</h2>
       Endast en fjärdedel av föräldradagarna tas ut av män. Majoriteten män tar bara ut de tre öronmärkta pappamånaderna. Därför finns förslag om att utöka antalet månader, som föräldrarna inte får överlåta, från tre till fem.
-      Argument för
+    <br />
+    <br />
+    <b>Argument för</b>
       Föräldraförsäkringen har en nyckelroll för jämställdheten – därför är dagens tre pappamånader inte nog. Barn behöver båda föräldrarna och därför ska föräldraförsäkringen delas mer jämlikt mellan föräldrarna.
-      Argument mot
+    <br />
+    <br />
+    <b>Argument mot</b>
       Staten ska inte lägga sig i hur föräldrar använder föräldraförsäkringen. Föräldrarna är bäst lämpade att avgöra det. Det behövs ett flexiblare synsätt på föräldraförsäkringen, en del av försäkringen bör exempelvis kunna användas senare när barnen är äldre.
 
   </div>
   <div id="question4" class="question">
-      Tiggeri ska förbjudas
+      <h2>Tiggeri ska förbjudas</h2>
       Flera europeiska länder, till exempel Danmark, Norge, Nederländerna och Storbritannien, har förbud mot gatutiggeri. Det finns flera liknande förslag om förbud mot tiggeri i svensk debatt.
-      Argument för
+      <p>Argument för
       Ett tiggeriförbud motverkar risken för livslångt tiggeri och permanent fattigdom. Ett förbud ökar trycket på reformer i tiggarnas hemländer.
-      Argument mot
+    </p>
+        Argument mot
       Att förbjuda tiggeri är att angripa ett symptom i stället för problemets rot. De som tigger i Sverige gör det för att de lever under miserabla förhållanden i sina hemländer.
 
   </div>
